syntax = "proto3";

package codevaldcross.v1;

option go_package = "github.com/aosanya/CodeValdSharedLib/gen/go/codevaldcross/v1;codevaldcrossv1";

// OrchestratorService is the inbound gRPC service exposed by CodeValdCross.
// Downstream services call Register on startup and periodically to advertise
// their availability and pub/sub topic contracts.
service OrchestratorService {
  // Register records the calling service as available and stores its pub/sub
  // topic capabilities. It is safe to call repeatedly â€” each call acts as a
  // liveness heartbeat. A successful response confirms the registration.
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

// PathBinding maps one URL path-parameter placeholder (as it appears in the
// pattern, e.g. "agencyId") to the corresponding top-level field name in the
// gRPC request message (e.g. "agency_id"). Cross injects the runtime value
// into the JSON request body before forwarding to the downstream service.
message PathBinding {
  string url_param = 1;
  string field     = 2;
}

// RouteDeclaration describes a single HTTP endpoint that a downstream service
// wants CodeValdCross to expose on its HTTP management server. Cross mounts
// a generic reverse-proxy handler for each declared route at registration time.
// Zero Cross source files name any downstream service directly.
message RouteDeclaration {
  // method is the HTTP method (e.g. "GET", "POST").
  string method = 1;

  // pattern is the net/http path pattern
  // (e.g. "/{agencyId}/tasks").
  string pattern = 2;

  // capability is a human-readable operation identifier (e.g. "create_task").
  string capability = 3;

  // grpc_method is the fully-qualified gRPC method path that Cross invokes
  // when this HTTP route is matched
  // (e.g. "/codevaldwork.v1.TaskService/CreateTask").
  string grpc_method = 4;

  // path_bindings declares how URL path parameters map into the top-level
  // fields of the gRPC request message.
  repeated PathBinding path_bindings = 5;
}

// RegisterRequest carries the service identity and its pub/sub topic contracts.
message RegisterRequest {
  // service_name is the unique identifier of the registering service
  // (e.g. "codevaldwork").
  string service_name = 1;

  // produces is the list of pub/sub topic strings this service publishes.
  repeated string produces = 2;

  // consumes is the list of pub/sub topic strings this service subscribes to.
  repeated string consumes = 3;

  // addr is the gRPC address (host:port) at which the registering service is
  // reachable. CodeValdCross uses this to dial the service after registration,
  // eliminating the need for static downstream service addresses in config.
  string addr = 4;

  // agency_id is the agency this service instance is scoped to.
  // Empty string means the instance is not scoped to a specific agency.
  string agency_id = 5;

  // routes are the HTTP endpoints this service wants Cross to expose.
  // Cross mounts a capability-dispatched handler for each declared route
  // at registration time. Zero Cross source files name these patterns.
  repeated RouteDeclaration routes = 6;
}

// RegisterResponse is intentionally empty.
// A successful RPC response is the confirmation of availability.
message RegisterResponse {}
